# blog

./: .gitignore  .nojekyll  .pre-commit-config.yaml  404.html  404.qmd  CNAME  README.md  _quarto.yml  about.html  about.qmd  custom.scss  index.html  index.qmd  index.xml  listings.json  projects.html  projects.qmd  projects.yml  pyproject.toml  robots.txt  search.json  sitemap.xml
2021-personal-snapshot/: index.html
2023-personal-snapshot/: index.html
2024-personal-snapshot/: index.html
2025-personal-snapshot/: index.html
4-ways-to-improve-your-plotly-graphs/: index.html
_extras/: start_modal.py
ai-search-engine-fastapi-qdrant-chatgpt/: index.html
blog/: _quarto.yml  about.qmd  custom.scss  index.qmd  projects.qmd  projects.yml  styles.css
build-a-site-quickly-using-google-sheets-python-and-aws/: index.html
clustering-documents-with-openai-langchain-hdbscan/: index.html
code-interpreter-chatbot-pyodide-langchain-openai/: index.html
custom/: gallery.css  gallery.js  pelican-explorer.css  pelican-explorer.js
docs/: about.html  index.html  index.xml  listings.json  projects.html  robots.txt  search.json  sitemap.xml
elasticsearch-python/: index.html
entrepreneurship-as-a-risk-management-strategy/: index.html
extras/: say-what-you-mean-with-llama-8b.ipynb  update_livebench_questions.py
fast-and-async-in-python-accelerate-your-requests-using-asyncio/: index.html
fastapi-nginx-gunicorn/: index.html
fine-tuning-vs-rag/: index.html
how-to-plot-with-python-popular-graphs-using-pandas-matplotlib-seaborn-and-plotly-express/: index.html
how-to-use-github-deploy-keys/: index.html
live-components-with-django-and-htmx/: index.html
mind-reading-algorithms/: index.html
my-entrepreneur-first-experience/: index.html
nlp-snippets-clean-and-tokenize-text-with-python/: index.html
nlp-snippets-cluster-documents-using-word2vec/: index.html
opensearch-python/: index.html
posts/: 2021-personal-snapshot.html  2021-personal-snapshot.qmd  2023-personal-snapshot.html  2023-personal-snapshot.qmd  2024-personal-snapshot.html  2024-personal-snapshot.qmd  2025-personal-snapshot.html  2025-personal-snapshot.qmd  4-ways-to-improve-your-plotly-graphs.html  4-ways-to-improve-your-plotly-graphs.md  5-years-freelancing-in-europe.html  5-years-freelancing-in-europe.qmd  _metadata.yml  agentic-workflows-langgraph.html  agentic-workflows-langgraph.ipynb  ai-search-engine-fastapi-qdrant-chatgpt.html  ai-search-engine-fastapi-qdrant-chatgpt.qmd  (+87 more)
(+178 files in other folders)
