[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Dylan Castillo <dylanjcastillo@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.2.0"
openai = "^1.30.5"
numpy = "^2.1.0"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
scikit-learn = "^1.5.1"
pillow = "^10.4.0"
datasets = "^3.1.0"
langsmith = "^0.1.147"
jsonref = "^1.1.0"
modal = "^0.67.15"
plotly = "^5.24.1"
jupyter = "^1.1.1"
quarto-cli = "^1.6.37"
google-generativeai = "^0.8.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
