[project]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Dylan Castillo <dylanjcastillo@gmail.com>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "notebook>=7.2.0",
    "openai>=1.30.5",
    "numpy>=2.1.0",
    "pandas>=2.2.2",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.5.1",
    "pillow>=10.4.0",
    "datasets>=3.1.0",
    "langsmith>=0.1.147",
    "jsonref>=1.1.0",
    "modal>=0.67.15",
    "plotly>=5.24.1",
    "jupyter>=1.1.1",
    "google-generativeai>=0.8.3",
    "instructor>=1.7.0",
    "outlines>=1.0.1",
    "mlx-lm>=0.25.2",
    "accelerate>=1.8.1",
    "quarto-cli>=1.7.32",
    "chromadb>=1.0.13",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.26",
    "langchain-community>=0.3.26",
    "pypdf>=5.7.0",
]

[dependency-groups]
dev = [
    "ipykernel<7.0.0,>=6.29.5",
    "pytest<9.0.0,>=8.3.4",
    "pytest-asyncio<1.0.0,>=0.25.2",
    "ruff>=0.9.3",
]
